--- a/src/app.scss
+++ b/src/app.scss
@@ -72,7 +72,7 @@ $bg-color: #F7A368;
 );
 @include carbon--theme();
 // @import "carbon-components/scss/globals/scss/css--font-face";
-@import "carbon-components/scss/globals/grid/grid";
+// @import "carbon-components/scss/globals/grid/grid";
 @import "carbon-components/scss/globals/scss/styles.scss";
 
 
